--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -71,6 +71,10 @@ footer {
             color: $bg-color;
             border: 2px solid $bg-color;
           }
+          .btn-primary:hover {
+            background-color: $main-color;
+          }
+          
   
           @media #{$brkmx900} {
             input {
@@ -115,21 +119,35 @@ footer {
             padding-top: 50px;
             gap: 10px;
         }
-        .f-col-1{
-            li{
-              display: inline;
+        .f-col-1 {
+          li {
+            display: inline-block;
+            margin-right: 10px;
+          }
+        
+          a {
+            display: inline-block;
+            width: 42px;
+            height: 42px;
+            overflow: hidden;
+            border: 2px solid rgba(19, 121, 255, 0.3);
+            border-radius: 50%;
+            text-align: center;
+            line-height: 42px;
+            color: $main-color;
+            margin-top: 30px;
+        
+            i {
+              font-size: 16px;
             }
-            .fa-linkedin, .fa-facebook-f, .fa-twitter{
-              margin-top: 30px;
-              width: 42px;
-              height: 42px;
-              border: 2px solid rgba(19, 121, 255, 0.3);
-              border-radius: 50%;
-              text-align: center;
-              line-height: 42px;
-              color: $main-color;
+        
+            &:hover {
+              background-color: $main-color;
+              color: $white;
+            }
           }
         }
+        
         .f-col-2{
           h5{
             @include text-style(700,16px,20px,0%);
