--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -50,15 +50,25 @@ ol {
 /*new common style*/
 
 //sections top bottom padding
-.section-wapper
+.section-wrapper
 {
 	padding-top: 64px;
 	padding-bottom: 64px;
 
-	@media (max-width:425px)
+	@media #{$brkmx426}
 	{
 		padding-top: 24px;
 		padding-bottom: 24px;
+	}
+}
+
+.title-wrapper
+{
+	padding-bottom: 64px;
+
+	@media #{$brkmx426}
+	{
+		padding-bottom: 30px;
 	}
 }
 
@@ -103,7 +113,7 @@ img {
 	}
   }
 
-.fill-btn
+.btn-primary
 {
 	&:hover{
 		background-color: transparent;
@@ -150,11 +160,15 @@ img {
       flex-direction: column;
       align-items: center;
 
+	  .btn{
+		padding: 8px 40px;
+		
+	  }
       .h-btn1, .h-btn2 {
         border-radius: 10px;
-        padding: 8px 40px;
         @include text-style(700, 16px,20px,0%);
         border: none;
+		height: 40px;
       }
   
       .h-btn1 {
@@ -172,6 +186,8 @@ img {
 
 		&:hover{
 			border: none;
+			border: 1px solid $main-color;
+
 		  }
       }
     }
@@ -421,5 +437,28 @@ img {
 	height: 44px;
 	border-radius: 8px;
 }
+
+//my account side bar
+
+.account-page-section, .order-history-section{
+	.nav-item
+    {
+      padding: 10px 0px;
+      @include text-style(500,16px,100%,0%);
+      text-align: left;
+
+      &:hover
+      {
+        background-color: $bg-color;
+        border-radius: 10px;
+      }
+    }
+    .nav-link
+    {
+      color: $small-font-text;
+      padding-left: 5px;
+    }
+}
+
   
 
