--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -44,18 +44,23 @@
   {
     border: transparent;
     color: $main-color;
+    background-color: transparent;
   }
   .navbar-toggler-icon
   {
     width: 20px;
     height: 20px;
     background-image: url('../../../assets/images/menubar-icon.svg');
+    border: none;
+    outline: none;
+    padding-left: 20px;
   }
 
   .navbar-nav {
     gap: 40px;
 
     .nav-item {
+      padding: 0;
       .nav-link {
         font-weight: 400;
         font-size: 14px;
@@ -67,9 +72,6 @@
         }
       }
 
-      &:first-child .nav-link {
-        color: $main-color;
-      }
     }
   }
 
